chore: freeze v8.0 alpha snapshot